Add GPT generated landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Laptop Liftoff</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="js.js" defer></script>
+  <title>Laptop Liftoff</title>
 </head>
 <body>
-    <p>bennett was here</p>
+  <header>
+    <nav>
+      <h1 class="logo">Laptop Liftoff</h1>
+      <ul class="menu">
+        <li><a href="#about">About</a></li>
+        <li><a href="#how-it-works">How It Works</a></li>
+        <li><a href="#donate">Donate</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="hero" class="full-screen">
+      <h2>Empowering the underprivileged through technology</h2>
+      <p>Donate your unused laptops and change lives today.</p>
+      <a href="#donate" class="cta">Donate Now</a>
+    </section>
+
+    <section id="about" class="full-screen">
+      <h2 class="scroll">About Laptop Liftoff</h2>
+      <p>...</p>
+    </section>
+
+    <section id="how-it-works" class="full-screen">
+      <h2>How It Works</h2>
+      <p>...</p>
+    </section>
+
+    <section id="donate" class="full-screen">
+      <h2>Donate</h2>
+      <p>...</p>
+    </section>
+
+    <section id="contact" class="full-screen">
+      <h2>Contact</h2>
+      <p>...</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Laptop Liftoff. All rights reserved.</p>
+  </footer>
 </body>
 </html>
